--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/6786615f2b.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -21,19 +22,17 @@
                 <div class="container__texto">
                     <h1>Adivinhe o <span class="container__texto-azul">numero secreto</span></h1>
                     <p class="texto__paragrafo">Escolha um número entre 1 a 10</p>
+                    <p class="texto__pequeno" id="tentativas"></p>
                 </div>
                 <input type="number" min="1" max="10" class="container__input">
                 <div class="chute container__botoes">
-                    <button onclick="verificarChute()" class="container__botao">Chutar</button>
+                    <button onclick="verificarChute()" id="chutar" class="container__botao">Chutar</button>
                     <button onclick="reiniciarJogo()" id="reiniciar" class="container__botao" disabled>Novo jogo</button>
                 </div>
             </div>
             <img src="./img/ia.png" alt="Uma pessoa olhando para a esquerda" class="container__imagem-pessoa" />
         </div>
     </div>
-
-
-
 
     <script src="app.js" defer></script>
 </body>
